--- a/Final-project/Process/process.html
+++ b/Final-project/Process/process.html
@@ -48,8 +48,31 @@
     </video>
   </p>
   <p>
-    I had already sent my 3D models to print when I change my mind. Luckily, my parts would also be useful.
+    I had already sent my 3D models to print when I change my mind. Luckily, my parts would also be useful. You can download the models here:<br><br>
+  <a download href="smallc2 copy.f3d"><strong>Small cylinder f3d</strong></a>- <a download href="smallc2 copy.stl"><strong>Small cylinder stl</strong></a>- <a download href="smallc2 copy.gcode"><strong>Small cylinder gcode</strong></a> <br><br>
+
+   <a download href="bigc2 copy.f3d"><strong>Big cylinder f3d</strong></a>- <a download href="bigc2 copy.stl"><strong>Big cylinder stl</strong></a>- <a download href="bigc-2 copy.gcode"><strong>Big cylinder gcode</strong></a><br><br>
+
+   <a download href="top2 copy.f3d"><strong>Cylinder top f3d</strong></a>-  <a download href="top2 copy.stl"><strong>Cylinder top stl</strong></a>- <a download href="top2 copy.gcode"><strong>Cylinder top gcode</strong></a><br><br>
+
+   <a download href="base2 copy.f3d"><strong>Cylinder base f3d</strong></a> -<a download href="base2 copy.stl"><strong>Cylinder base stl</strong></a>- <a download href="base2  copy.gcode"><strong>Cylinder base gcode</strong></a><br><br>
+   When my 3D parts arrive one of them was broke so to pull out the project I had to cut the two cylinders and glue them instead of using the threads. Broke part:<br><br>
+   <img src="brokep.png" alt="4 pic" style="width: 45%"><br><br>
+   How it ended up being:<br><br>
+   <img src="f1.png" alt="4 pic" style="width: 45%"> <img src="f2.png" alt="4 pic" style="width: 45%"><br><br>
   </p>
+  <p>
+    The code was explained deep in the final project page just because it is the most important part of the project. Here you can download them:<br><br>
+    <a download href="firetohuzzahfp copy.ino"><strong>Arduino code</strong></a>- <a download href="index copy.html"><strong>HTML</strong></a>- <a download href="sketch copy.js"><strong>P5.js</strong></a> <br><br>
+
+  </p>
+  <h4>Resources:</h4>
+  <a href="https://docs.espressif.com/projects/esp-idf/en/latest/esp32/api-reference/peripherals/i2s.html#application-example"><strong>Website</strong><br><br>
+  <a href="https://www.sitepoint.com/community/t/chrome-microphone-permissions/288121/3"><strong>Forum</strong><br><br>
+  <a href="https://www.youtube.com/watch?v=jmznx0Q1fP0&t=326s"><strong>Video about machine lerning</strong><br><br>
+  <a href="https://learn.ml5js.org/docs/#/tutorials/hello-ml5"><strong>Website ml5</strong><br><br> 
+  <a href="https://www.youtube.com/watch?v=qmruNKeIN-o&list=PLnq7JUnBumAyhSBBp95MsQ5-chBAYheZw&index=34"><strong>Video about I2S</strong><br><br>
+  <a href="https://esp32.com/viewtopic.php?t=15185"><strong>Website about I2S</strong><br><br>
 </div>
 </body>
 </html>
