--- a/SoundModel/index.html
+++ b/SoundModel/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
   <script src="https://cdn.jsdelivr.net/npm/p5@1.1.4/lib/p5.min.js"></script>
@@ -19,10 +20,9 @@
         console.log('No mic for you!')
       });
     </script>
-  <h1>Teachable Machine and LED 1</h1>
+  <h1>Teachable Machine and LED</h1>
   <script src="https://www.gstatic.com/firebasejs/7.13.2/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.13.2/firebase-database.js"></script>
   <script src="sketch.js"></script>
 
-<!-- <script defer src="./sketch.js"></script> -->
 </body></html>
