--- a/class6/class6.html
+++ b/class6/class6.html
@@ -45,11 +45,11 @@
     Download the models here:<br><br>
    <a download href="smallc2.f3d"><strong>Small cylinder f3d</strong></a>-  <a download href="smallc2.stl"><strong>Small cylinder stl</strong></a>- <a download href="smallc2.gcode"><strong>Small cylinder gcode</strong></a> <br><br>
 
-   <a download href="bigc2.f3d"><strong>Big cylinder f3d</strong></a>- <a download href="bigc2.stl"><strong>Big cylinder stl</strong></a>- <a download href="bigc-2.gcode.zip"><strong>Big cylinder gcode</strong></a><br><br>
+   <a download href="bigc2.f3d"><strong>Big cylinder f3d</strong></a>- <a download href="bigc2.stl"><strong>Big cylinder stl</strong></a>- <a download href="bigc-2.gcode"><strong>Big cylinder gcode</strong></a><br><br>
 
    <a download href="top2.f3d"><strong>Cylinder top f3d</strong></a>-  <a download href="top2.stl"><strong>Cylinder top stl</strong></a>- <a download href="top2.gcode"><strong>Cylinder top gcode</strong></a><br><br>
 
-   <a download href="base2.f3d"><strong>Cylinder base f3d</strong></a> -<a download href="base2.stl"><strong>Cylinder base stl</strong></a>- <a download href="base2.gcode"><strong>Cylinder base gcode</strong></a><br><br>
+   <a download href="base2.f3d"><strong>Cylinder base f3d</strong></a> -<a download href="base2 .stl"><strong>Cylinder base stl</strong></a>- <a download href="base2.gcode"><strong>Cylinder base gcode</strong></a><br><br>
    For the photogrammetry app, I used Qlone, which requires printing a mat. To get a better measurement, I printed both the horizontal and the vertical ones.  The app works with q dome style in which they show you what parts are already recognized. First, I tried with the small bottle because it had a lot of details that would be tedious to create in the fusion 360. Sadly, the app couldn't get an accurate model, even though I use different measurements in various positions. For those reasons, I change to a simpler body; in this case, the app got it, okay, but with the edition tool, I could manually perfect the figure. Still, I couldn't get the exact shape. I wouldn't recommend this app because it took so much time to take the measurements for the results that I gave you. Here are some pictures of the process<br><br>
    <img src="de1.PNG" alt="1 pic" style="width: 45%"> <img src="de2.PNG" alt="2 pic" style="width: 45%"><br><br>
    <img src="de3.PNG" alt="3 pic" style="width: 45%"> <img src="de4.PNG" alt="4 pic" style="width: 45%"><br><br>
