--- a/Final-project/Final_projects.html
+++ b/Final-project/Final_projects.html
@@ -38,8 +38,7 @@
 <h1>LED control with speech recognition</h1>
 <h3><a href="Process/process.html">Go to this <strong>website</strong> to see the process!</a></h3>
 <div class="paragraph">
-	<iframe class="center" width="420" height="315"
-	src="https://youtu.be/LleFpzbRw7M">
+	<iframe  class="center" width="560" height="315" src="https://www.youtube.com/embed/LleFpzbRw7M" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>	
 	</iframe>
 
 	<h4><strong>Hardware</strong></h4>
