--- a/Final-project/sketchfp.html
+++ b/Final-project/sketchfp.html
@@ -28,7 +28,7 @@
 </head>   
 
 <body>
-<h3>HTML code:</h3>
+<h3>JavaScript code:</h3>
 <pre><code class="language-arduino">
 // Label (start by showing listening)
 let label = "listening";
