--- a/Final-project/Final_projects.html
+++ b/Final-project/Final_projects.html
@@ -71,6 +71,9 @@
 
 		<iframe src="arduinofp.html" width="100%" height="300" style="border:1px solid black;">
 		</iframe><br><br>
+		The actual website:<br><br>
+		<iframe src="../SoundModel/index.html" width="100%" height="350" style="border:1px solid black;">
+		</iframe><br><br>
 	</p>
 	<h4><strong>The MIC problem</strong></h4>
 	<p>
